// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`http normal 1`] = `
Array [
  Array [
    Object {
      "data": null,
      "files": undefined,
      "headers": Object {
        "accept": "application/json",
      },
      "method": "GET",
      "query": undefined,
      "url": "/foo",
    },
    Object {
      "baseURL": "",
      "fetcher": [MockFunction] {
        "calls": [Circular],
        "results": Array [
          Object {
            "type": "return",
            "value": Object {
              "isTest": true,
            },
          },
        ],
      },
      "middleware": Array [],
      "withCredentials": false,
    },
  ],
]
`;

exports[`parseRequestArgs & creator 1`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "metadata": Object {
    "params": Object {
      "bar": "baz",
    },
  },
  "trigger": Object {
    "method": "GET",
    "path": "/foo/:bar",
  },
}
`;

exports[`parseRequestArgs & creator 2`] = `
Object {
  "data": Object {
    "args": Array [
      "a",
      "b",
    ],
  },
  "files": undefined,
  "headers": Object {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo/baz",
}
`;

exports[`parseRequestArgs & creator 3`] = `
Object {
  "args": Array [],
  "metadata": null,
  "trigger": Object {
    "method": "GET",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 4`] = `
Object {
  "data": null,
  "files": undefined,
  "headers": Object {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo",
}
`;

exports[`parseRequestArgs & creator 5`] = `
Object {
  "args": Array [],
  "metadata": null,
  "trigger": Object {
    "method": "ALL",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 6`] = `
Object {
  "data": null,
  "files": undefined,
  "headers": Object {
    "accept": "application/json",
  },
  "method": "GET",
  "query": undefined,
  "url": "/foo",
}
`;

exports[`parseRequestArgs & creator 7`] = `
Object {
  "args": Array [
    "a",
    "b",
  ],
  "metadata": null,
  "trigger": Object {
    "method": "ALL",
    "path": "/foo",
  },
}
`;

exports[`parseRequestArgs & creator 8`] = `
Object {
  "data": Object {
    "args": Array [
      "a",
      "b",
    ],
  },
  "files": undefined,
  "headers": Object {
    "accept": "application/json",
  },
  "method": "POST",
  "query": undefined,
  "url": "/foo",
}
`;
